--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
     "start": "node src/core/chain.js"
   },
   "author": "devmakerid",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "bip39": "^3.1.0",
+    "crypto-js": "^4.2.0",
+    "elliptic": "^6.6.1"
+  }
 }
