--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "license": "MIT",
   "dependencies": {
     "bip39": "^3.1.0",
+    "body-parser": "^2.2.0",
     "crypto-js": "^4.2.0",
-    "elliptic": "^6.6.1"
+    "elliptic": "^6.6.1",
+    "express": "^5.1.0",
+    "ws": "^8.18.3"
   }
 }
